; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_request.c_isci_request_from_tag.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_request.c_isci_request_from_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_request = type { i64, i64, i32*, i32 }
%struct.isci_host = type { %struct.isci_request** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.isci_request* (%struct.isci_host*, i32)* @isci_request_from_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.isci_request* @isci_request_from_tag(%struct.isci_host* %0, i32 %1) #0 {
  %3 = alloca %struct.isci_host*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.isci_request*, align 8
  store %struct.isci_host* %0, %struct.isci_host** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.isci_host*, %struct.isci_host** %3, align 8
  %7 = getelementptr inbounds %struct.isci_host, %struct.isci_host* %6, i32 0, i32 0
  %8 = load %struct.isci_request**, %struct.isci_request*** %7, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @ISCI_TAG_TCI(i32 %9)
  %11 = getelementptr inbounds %struct.isci_request*, %struct.isci_request** %8, i64 %10
  %12 = load %struct.isci_request*, %struct.isci_request** %11, align 8
  store %struct.isci_request* %12, %struct.isci_request** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.isci_request*, %struct.isci_request** %5, align 8
  %15 = getelementptr inbounds %struct.isci_request, %struct.isci_request* %14, i32 0, i32 3
  store i32 %13, i32* %15, align 8
  %16 = load %struct.isci_request*, %struct.isci_request** %5, align 8
  %17 = getelementptr inbounds %struct.isci_request, %struct.isci_request* %16, i32 0, i32 2
  store i32* null, i32** %17, align 8
  %18 = load %struct.isci_request*, %struct.isci_request** %5, align 8
  %19 = getelementptr inbounds %struct.isci_request, %struct.isci_request* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  %20 = load %struct.isci_request*, %struct.isci_request** %5, align 8
  %21 = getelementptr inbounds %struct.isci_request, %struct.isci_request* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load %struct.isci_request*, %struct.isci_request** %5, align 8
  ret %struct.isci_request* %22
}

declare dso_local i64 @ISCI_TAG_TCI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
